--- a/CityGuide/CityGuide/Classes/Controllers/FilterMapController/FilterMapController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/FilterMapController/FilterMapController.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="NNb-9h-cun">
-                    <rect key="frame" x="8" y="77" width="584" height="523"/>
+                    <rect key="frame" x="8" y="0.0" width="584" height="600"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="29g-jL-EJq"/>
@@ -26,12 +26,13 @@
             </subviews>
             <color key="backgroundColor" red="0.94509803920000002" green="0.96078431369999995" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="NNb-9h-cun" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="BNL-ZU-o0P"/>
-                <constraint firstAttribute="trailing" secondItem="NNb-9h-cun" secondAttribute="trailing" constant="8" id="Qqn-LY-GWP"/>
-                <constraint firstAttribute="bottom" secondItem="NNb-9h-cun" secondAttribute="bottom" id="USC-Co-mpV"/>
-                <constraint firstItem="NNb-9h-cun" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="77" id="XqK-fg-na1"/>
+                <constraint firstAttribute="trailing" secondItem="NNb-9h-cun" secondAttribute="trailing" constant="8" id="FTY-Y0-DzF"/>
+                <constraint firstItem="NNb-9h-cun" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="VbJ-y0-n9i"/>
+                <constraint firstAttribute="bottom" secondItem="NNb-9h-cun" secondAttribute="bottom" id="oLL-fA-JjH"/>
+                <constraint firstItem="NNb-9h-cun" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ug2-GD-ts2"/>
             </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <nil key="simulatedStatusBarMetrics"/>
+            <point key="canvasLocation" x="147" y="26"/>
         </view>
     </objects>
 </document>
