--- a/CityGuide/CityGuide/Classes/Controllers/MapViewController/MapViewController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/MapViewController/MapViewController.xib
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7706"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapViewController">
             <connections>
                 <outlet property="boxView" destination="esb-gj-jG5" id="Dtm-NV-9dw"/>
-                <outlet property="categoriesButton" destination="R6A-GK-HCM" id="XqK-vV-CaW"/>
-                <outlet property="downCategoriesButton" destination="91r-Pr-q3v" id="Cyp-9V-1Cw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,49 +15,19 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="R6A-GK-HCM">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Bah-Bb-veI"/>
-                    </constraints>
-                    <state key="normal" title="Выберите категорию ">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="selectCategories:" destination="-1" eventType="touchUpInside" id="yU5-cT-ALm"/>
-                    </connections>
-                </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="91r-Pr-q3v">
-                    <rect key="frame" x="0.0" y="38" width="600" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="FSZ-Qc-GXg"/>
-                    </constraints>
-                    <state key="normal" title="Выберите подкатегорию">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="selectDownCategories:" destination="-1" eventType="touchUpInside" id="b4z-hC-tR5"/>
-                    </connections>
-                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esb-gj-jG5">
-                    <rect key="frame" x="0.0" y="81" width="600" height="519"/>
+                    <rect key="frame" x="0.0" y="61" width="600" height="539"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="91r-Pr-q3v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3Zf-Uo-R4W"/>
-                <constraint firstItem="esb-gj-jG5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AVz-un-YTl"/>
-                <constraint firstAttribute="trailing" secondItem="R6A-GK-HCM" secondAttribute="trailing" id="Btl-yc-O7A"/>
-                <constraint firstItem="R6A-GK-HCM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="WIB-74-zww"/>
-                <constraint firstItem="91r-Pr-q3v" firstAttribute="top" secondItem="R6A-GK-HCM" secondAttribute="bottom" constant="8" id="aDA-gU-hi6"/>
-                <constraint firstItem="esb-gj-jG5" firstAttribute="top" secondItem="91r-Pr-q3v" secondAttribute="bottom" constant="13" id="cpO-dZ-W8a"/>
-                <constraint firstAttribute="trailing" secondItem="91r-Pr-q3v" secondAttribute="trailing" id="h9A-hy-WBh"/>
-                <constraint firstAttribute="trailing" secondItem="esb-gj-jG5" secondAttribute="trailing" id="hnI-Ym-fUD"/>
-                <constraint firstItem="R6A-GK-HCM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="oWj-PO-iXu"/>
-                <constraint firstAttribute="bottom" secondItem="esb-gj-jG5" secondAttribute="bottom" id="quU-Vt-K57"/>
+                <constraint firstItem="esb-gj-jG5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="61" id="ClY-od-6IW"/>
+                <constraint firstItem="esb-gj-jG5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="O62-mp-29v"/>
+                <constraint firstAttribute="bottom" secondItem="esb-gj-jG5" secondAttribute="bottom" id="txE-97-btk"/>
+                <constraint firstAttribute="trailing" secondItem="esb-gj-jG5" secondAttribute="trailing" id="wjQ-AO-xux"/>
             </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
         </view>
     </objects>
 </document>
