--- a/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -22,7 +22,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jsj-ma-TXI">
-                        <rect key="frame" x="375" y="23" width="43" height="21"/>
+                        <rect key="frame" x="395" y="23" width="43" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="0Bo-q2-3qL"/>
                             <constraint firstAttribute="width" constant="43" id="Lpf-OC-x2s"/>
@@ -35,7 +35,7 @@
                         </variation>
                     </label>
                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="V30-GR-lqy">
-                        <rect key="frame" x="426" y="20" width="94" height="29"/>
+                        <rect key="frame" x="446" y="20" width="94" height="29"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="29" id="qJe-ox-nfc"/>
                             <constraint firstAttribute="width" constant="94" id="vlo-0h-7Pn"/>
@@ -54,7 +54,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nane" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zv-1m-lho">
-                        <rect key="frame" x="66" y="10" width="296" height="50"/>
+                        <rect key="frame" x="66" y="10" width="316" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="sLl-6J-7tI"/>
                         </constraints>
@@ -68,7 +68,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="buF-xD-wgs" firstAttribute="top" secondItem="0zv-1m-lho" secondAttribute="bottom" constant="-10" id="6bl-6E-02m"/>
-                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="25" id="7wi-4u-uFk"/>
+                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="5" id="7wi-4u-uFk"/>
                     <constraint firstItem="Jsj-ma-TXI" firstAttribute="leading" secondItem="0zv-1m-lho" secondAttribute="trailing" constant="13" id="9fd-N4-Rrl"/>
                     <constraint firstItem="buF-xD-wgs" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="BdH-UZ-AGM"/>
                     <constraint firstItem="V30-GR-lqy" firstAttribute="leading" secondItem="Jsj-ma-TXI" secondAttribute="trailing" constant="8" id="HIX-oW-CZS"/>
